S123: Keiyoushi on-device PoC — Mac phase verified, iPhone phase ready
- Patched M-Extension-Server runs Asura Scans + MangaFire end to end on a
  java.base-only, interpreter-only JVM (the iPhone runtime's limits).
- Fixes needed on the phone too: our java.util.logging stand-in, and a
  NoZstdInterceptor patch (Keiyoushi's KeiSource now requests zstd, whose
  decoder is JNI-only).
- scripts/keiyoushi-poc: reproducible setup (58 s from zero), Mac harness,
  OpenJDK Mobile -> OpenJDKRuntime.framework build for iphoneos.
- Yomi/KEIYOUSHI_POC.md: decisions, results, gaps, exact Phase 1 steps.
- RESEARCH.md §22.12 evidence; CLAUDE/ROADMAP/METODOLOGIA/ARQUITECTURA handoff.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>